--- a/docker-compose.wrs.yml
+++ b/docker-compose.wrs.yml
@@ -1,5 +1,5 @@
 # Docker Compose cho wrs.edu.vn - Port 3555
-version: '3.8'
+# version: '3.8'  # Obsolete in newer docker-compose
 
 services:
   # MongoDB Database
@@ -16,7 +16,7 @@ services:
     networks:
       - cuuho-network
     healthcheck:
-      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      test: [ "CMD", "mongosh", "--eval", "db.adminCommand('ping')" ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -49,11 +49,11 @@ services:
     networks:
       - cuuho-network
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:5000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      test: [ "CMD", "node", "-e", "require('http').get('http://localhost:5000/api/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})" ]
       interval: 30s
-      timeout: 3s
-      retries: 3
-      start_period: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
 
   # Init Database Service (chạy 1 lần sau khi MongoDB ready)
   init-db:
@@ -73,7 +73,7 @@ services:
     networks:
       - cuuho-network
     command: node scripts/initDatabase.js
-    restart: "no"  # Chỉ chạy 1 lần
+    restart: "no" # Chỉ chạy 1 lần
 
   # Frontend
   frontend:
@@ -86,7 +86,7 @@ services:
     container_name: cuuho-frontend
     restart: unless-stopped
     ports:
-      - "${FRONTEND_PORT:-3555}:80"  # Port 3555 cho wrs.edu.vn
+      - "${FRONTEND_PORT:-3555}:80" # Port 3555 cho wrs.edu.vn
     depends_on:
       - backend
     networks:
@@ -99,4 +99,3 @@ volumes:
 networks:
   cuuho-network:
     driver: bridge
-
