--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-draw": "^1.5.1",
     "antd": "^5.12.0",
     "axios": "^1.6.2",
     "mapbox-gl": "^3.0.1",
@@ -26,4 +27,3 @@
     "vite": "^5.0.8"
   }
 }
-
